Deploy PokeApi/ingress/ingress-nginxventas.yml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
metadata:
  name: mipagina-ventas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ventas-app-front-service
                port:
                  number: 80
